infrastructure/k8s/gameserver/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver
spec:
  template:
    spec:
      containers:
      - name: gameserver
        image: lvl13mage/steamsnstreams_gameserver:production-latest
