infrastructure/k8s/gameserver/overlays/production/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gameserver
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`production.gameserver.browsergame.lvl13mage.live`)
    kind: Rule
    services:
    - name: gametts-service
      port: 80
